--- a/twentyfour/src/main/res/layout/activity_main.xml
+++ b/twentyfour/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,21 +18,22 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="#fff">
+            <Button
+                android:id="@+id/menu_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="MENU"
+                android:layout_alignParentBottom="true"/>
             <com.twentyfour.utility.PullToRefreshListView
                 android:id="@+id/FBList"
+                android:layout_above="@id/menu_button"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:background="#fff"
-                android:padding="5dp"/>
-
-            <ImageView
-                android:id="@+id/menu_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_menu_dark"
-                android:layout_marginTop="15dp"
-                android:layout_alignParentLeft="true"/>
-
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"/>
             <RelativeLayout
                 android:id="@+id/loadingAnimationContent"
                 android:layout_width="fill_parent"
