--- a/twentyfour/src/main/res/layout/list_item_event.xml
+++ b/twentyfour/src/main/res/layout/list_item_event.xml
@@ -11,12 +11,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="5dp">
-        <ImageView
-            android:id="@+id/pic"
-            android:layout_height="80dp"
-            android:layout_width="80dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/no_photo"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/pic"
+                android:layout_height="80dp"
+                android:layout_width="80dp"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/no_photo"/>
+            <RelativeLayout
+                android:id="@+id/loadingIcon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:visibility="gone">
+                <ProgressBar
+                    android:id="@+id/animationLoading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:indeterminate="true"
+                    android:layout_centerInParent="true"/>
+                </RelativeLayout>
+            </RelativeLayout>
         <LinearLayout
             android:id="@+id/mainDetails"
             android:layout_width="wrap_content"
@@ -75,24 +93,44 @@
         android:layout_marginTop="10dp"
         android:textColor="#000"
         android:layout_marginBottom="10dp"/>
-    <TextView
-        android:id="@+id/friendsName"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:text="Ivan Zarea"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="3dp"
-        android:paddingLeft="2dp"
-        android:paddingTop="2dp"
-        android:paddingRight="2dp"
-        android:paddingBottom="3dp"
-        android:background="#009933"
-        android:textColor="#fff"/>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/friendsName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:text="Ivan Zarea"
+            android:paddingLeft="2dp"
+            android:paddingTop="2dp"
+            android:paddingRight="2dp"
+            android:paddingBottom="3dp"
+            android:background="#009933"
+            android:textColor="#fff"/>
+        <RelativeLayout
+            android:id="@+id/loading"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="20dp"
+            android:visibility="gone">
+            <ProgressBar
+                android:id="@+id/animationLoading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/progressBarStyleLarge"
+                android:indeterminate="true"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/going"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="3dp"
         android:orientation="horizontal">
