--- a/twentyfour/src/main/res/layout/menu.xml
+++ b/twentyfour/src/main/res/layout/menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="270dp"
-    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="200dp"
     android:background="#282828"
     android:cacheColorHint="#32394a"
     android:orientation="vertical" >
@@ -20,7 +20,7 @@
         android:layout_toRightOf="@id/userThumb"/>
     <RelativeLayout
         android:id="@+id/relativeMenuView"
-        android:layout_width="270dp"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/userThumb"
         android:cacheColorHint="#32394a"
